Fixed overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,7 +11,7 @@ body {
   background-size: cover;
   width: 100vw;
   height: 100vh;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 header {
